--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="id">
+<html lang="id" class="scroll-smooth">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,39 +12,48 @@
     html { scroll-behavior: smooth; }
     .glass { background: rgba(255,255,255,0.8); backdrop-filter: blur(6px); }
     .slider::-webkit-scrollbar { display: none; }
+
+    /* Animasi */
+    @keyframes fadeIn { from {opacity:0; transform: translateY(20px);} to {opacity:1; transform:translateY(0);} }
+    .fade-in { animation: fadeIn 1s ease forwards; opacity:0; }
   </style>
 </head>
-<body class="font-sans text-slate-800 antialiased bg-gray-50">
+<body class="font-sans text-slate-800 antialiased bg-gray-50 dark:bg-slate-900 dark:text-slate-100 transition-colors">
 
   <!-- HEADER -->
-  <header class="bg-white/70 glass shadow-sm sticky top-0 z-50">
+  <header class="bg-white/70 dark:bg-slate-800/80 glass shadow-sm sticky top-0 z-50">
     <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
       <!-- Logo -->
       <div class="flex items-center gap-3">
-        <img src="asset/Logo.png" alt="Logo Damkar" class="h-10 w-10 object-contain rounded-md" />
+        <img src="asset/Logo.png" alt="Logo Damkar" class="h-10 w-10 object-contain rounded-md" loading="lazy"/>
         <div>
-          <h1 class="text-lg font-bold text-red-700">DISDAMKARMAT</h1>
-          <p class="text-xs text-slate-500">Kabupaten Barito Utara</p>
+          <h1 class="text-lg font-bold text-red-700 dark:text-red-400">DISDAMKARMAT</h1>
+          <p class="text-xs text-slate-500 dark:text-slate-300">Kabupaten Barito Utara</p>
         </div>
       </div>
 
       <!-- Navigasi -->
-      <nav class="hidden md:flex items-center gap-6 text-sm font-medium text-slate-700">
-        <a href="#sop" class="hover:text-red-600">Informasi</a>
-        <a href="#tips" class="hover:text-red-600">Tips</a>
-        <a href="#tutorial" class="hover:text-red-600">Tutorial</a>
-        <a href="#wawancara" class="hover:text-red-600">Wawancara</a>
-        <a href="#kontak" class="hover:text-red-600">Kontak</a>
+      <nav class="hidden md:flex items-center gap-6 text-sm font-medium text-slate-700 dark:text-slate-200">
+        <a href="#sop" class="hover:text-red-600 dark:hover:text-red-400">Informasi</a>
+        <a href="#tips" class="hover:text-red-600 dark:hover:text-red-400">Tips</a>
+        <a href="#tutorial" class="hover:text-red-600 dark:hover:text-red-400">Tutorial</a>
+        <a href="#wawancara" class="hover:text-red-600 dark:hover:text-red-400">Wawancara</a>
+        <a href="#kontak" class="hover:text-red-600 dark:hover:text-red-400">Kontak</a>
       </nav>
+
+      <!-- Dark mode toggle -->
+      <button id="darkToggle" class="ml-4 p-2 rounded-md bg-slate-200 dark:bg-slate-700 hover:scale-110 transition">
+        🌙
+      </button>
     </div>
   </header>
 
   <main>
     <!-- HERO -->
-    <section class="relative text-white py-20">
+    <section class="relative text-white py-20 fade-in">
       <!-- Background -->
       <div class="absolute inset-0">
-        <img src="asset/bg.jpg" alt="Background" class="w-full h-full object-cover">
+        <img src="asset/bg.jpg" alt="Background" class="w-full h-full object-cover" loading="lazy">
         <div class="absolute inset-0 bg-black/50"></div>
       </div>
 
@@ -68,57 +77,52 @@
     </section>
 
     <!-- SOP Layanan -->
-    <section id="sop" class="max-w-5xl mx-auto px-4 py-12">
+    <section id="sop" class="max-w-5xl mx-auto px-4 py-12 fade-in">
       <h3 class="text-xl font-semibold mb-4">Alur Laporan</h3>
-      <p class="text-sm text-slate-600 mb-6">Panduan alur pelaporan dari masyarakat ke Damkar.</p>
-      <img src="asset/sop.png" alt="SOP Layanan" class="rounded-xl shadow-md w-full" />
+      <p class="text-sm text-slate-600 dark:text-slate-300 mb-6">Panduan alur pelaporan dari masyarakat ke Damkar.</p>
+      <img src="asset/sop.png" alt="SOP Layanan" class="rounded-xl shadow-md w-full" loading="lazy"/>
     </section>
 
     <!-- Tips Pencegahan -->
-    <section id="tips" class="bg-white/70 glass py-12">
+    <section id="tips" class="bg-white/70 dark:bg-slate-800/70 glass py-12 fade-in">
       <div class="max-w-5xl mx-auto px-4">
         <h3 class="text-xl font-semibold mb-4">Tips Pencegahan Kebakaran</h3>
-
-        <!-- Wrapper slider -->
         <div class="relative">
-          <!-- Container scroll -->
           <div id="tipsSlider" class="flex snap-x overflow-x-auto scroll-smooth">
-            <div class="slide bg-white rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
-              <img src="asset/tips1.png" alt="Tips pencegahan singkat" class="rounded-lg w-full" />
+            <div class="slide bg-white dark:bg-slate-700 rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
+              <img src="asset/tips1.png" alt="Tips pencegahan singkat" class="rounded-lg w-full" loading="lazy"/>
             </div>
-            <div class="slide bg-white rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
-              <img src="asset/tips2.png" alt="Kenapa bisa terjadi?" class="rounded-lg w-full" />
+            <div class="slide bg-white dark:bg-slate-700 rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
+              <img src="asset/tips2.png" alt="Kenapa bisa terjadi?" class="rounded-lg w-full" loading="lazy"/>
             </div>
-            <div class="slide bg-white rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
-              <img src="asset/tips3.png" alt="Kabel dan stop kontak tidak standar" class="rounded-lg w-full" />
+            <div class="slide bg-white dark:bg-slate-700 rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
+              <img src="asset/tips3.png" alt="Kabel dan stop kontak tidak standar" class="rounded-lg w-full" loading="lazy"/>
             </div>
-            <div class="slide bg-white rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
-              <img src="asset/tips4.png" alt="Kompor yang ditinggal saat memasak" class="rounded-lg w-full" />
+            <div class="slide bg-white dark:bg-slate-700 rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
+              <img src="asset/tips4.png" alt="Kompor yang ditinggal saat memasak" class="rounded-lg w-full" loading="lazy"/>
             </div>
-            <div class="slide bg-white rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
-              <img src="asset/tips5.png" alt="Tabung gas bocor" class="rounded-lg w-full" />
+            <div class="slide bg-white dark:bg-slate-700 rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
+              <img src="asset/tips5.png" alt="Tabung gas bocor" class="rounded-lg w-full" loading="lazy"/>
             </div>
-            <div class="slide bg-white rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
-              <img src="asset/tips6.png" alt="Perlunya APAR" class="rounded-lg w-full" />
+            <div class="slide bg-white dark:bg-slate-700 rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
+              <img src="asset/tips6.png" alt="Perlunya APAR" class="rounded-lg w-full" loading="lazy"/>
             </div>
-            <div class="slide bg-white rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
-              <img src="asset/tips7.png" alt="Bagaimana kalau sudah terlanjur?" class="rounded-lg w-full" />
+            <div class="slide bg-white dark:bg-slate-700 rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
+              <img src="asset/tips7.png" alt="Bagaimana kalau sudah terlanjur?" class="rounded-lg w-full" loading="lazy"/>
             </div>
-            <div class="slide bg-white rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
-              <img src="asset/tips8.png" alt="Reminder" class="rounded-lg w-full" />
+            <div class="slide bg-white dark:bg-slate-700 rounded-xl shadow p-4 snap-center shrink-0 w-4/5 md:w-1/3">
+              <img src="asset/tips8.png" alt="Reminder" class="rounded-lg w-full" loading="lazy"/>
             </div>
           </div>
-
-          <!-- Indicator dots -->
           <div id="tipsDots" class="flex justify-center mt-4 gap-2"></div>
         </div>
       </div>
     </section>
 
     <!-- Tutorial -->
-    <section id="tutorial" class="max-w-5xl mx-auto px-4 py-12">
+    <section id="tutorial" class="max-w-5xl mx-auto px-4 py-12 fade-in">
       <h3 class="text-xl font-semibold mb-4">Tutorial Pemadaman</h3>
-      <p class="text-sm text-slate-600 mb-6">Video yang mudah diikuti untuk tindakan awal saat api kecil.</p>
+      <p class="text-sm text-slate-600 dark:text-slate-300 mb-6">Video yang mudah diikuti untuk tindakan awal saat api kecil.</p>
       <div class="grid md:grid-cols-2 gap-6">
         <div class="rounded-xl overflow-hidden shadow">
           <iframe class="w-full aspect-video" src="https://www.youtube.com/embed/F4DqTCSycKM" title="Tutorial APAR" frameborder="0" allowfullscreen loading="lazy"></iframe>
@@ -130,36 +134,36 @@
     </section>
 
     <!-- Wawancara -->
-    <section id="wawancara" class="bg-white/60 glass py-12">
+    <section id="wawancara" class="bg-white/60 dark:bg-slate-800/60 glass py-12 fade-in">
       <div class="max-w-5xl mx-auto px-4 text-center">
         <h3 class="text-xl font-semibold mb-4">Wawancara Pimpinan</h3>
-        <p class="text-sm text-slate-600 mb-6">Pengalaman dan pesan penting dari pimpinan Damkar Barito Utara.</p>
+        <p class="text-sm text-slate-600 dark:text-slate-300 mb-6">Pengalaman dan pesan penting dari pimpinan Damkar Barito Utara.</p>
         <div class="rounded-xl overflow-hidden shadow max-w-2xl mx-auto">
           <iframe class="w-full aspect-video" src="https://www.youtube.com/embed/VIDEO_ID" title="Wawancara Pimpinan" frameborder="0" allowfullscreen loading="lazy"></iframe>
         </div>
       </div>
     </section>
 
-    <!-- Section: Sosial Media -->
-    <section id="kontak" class="bg-gray-100 py-12">
+    <!-- Sosial Media -->
+    <section id="kontak" class="bg-gray-100 dark:bg-slate-800 py-12 fade-in">
       <div class="max-w-4xl mx-auto px-4 text-center">
         <h2 class="text-2xl md:text-3xl font-bold mb-6">Ikuti Sosial Media Kami</h2>
         <div class="grid grid-cols-2 sm:grid-cols-4 gap-6 justify-items-center">
           <a href="https://www.instagram.com/dinas_damkarmat_baritoutara/" target="_blank" class="flex flex-col items-center gap-2 hover:scale-105 transition">
-            <img src="asset/icon/instagram.svg" alt="Instagram" class="w-8 h-8"/> 
-            <span class="text-sm font-medium text-gray-800">Instagram</span>
+            <img src="asset/icon/instagram.svg" alt="Instagram" class="w-8 h-8" loading="lazy"/> 
+            <span class="text-sm font-medium">Instagram</span>
           </a>
           <a href="https://www.tiktok.com/@105barut" target="_blank" class="flex flex-col items-center gap-2 hover:scale-105 transition">
-            <img src="asset/icon/tiktok.svg" alt="TikTok" class="w-8 h-8"/>
-            <span class="text-sm font-medium text-gray-800">TikTok</span>
+            <img src="asset/icon/tiktok.svg" alt="TikTok" class="w-8 h-8" loading="lazy"/>
+            <span class="text-sm font-medium">TikTok</span>
           </a>
           <a href="https://www.youtube.com/channel/UCzGTH2k2Ob1RfGqaD70YjZw" target="_blank" class="flex flex-col items-center gap-2 hover:scale-105 transition">
-            <img src="asset/icon/youtube.svg" alt="YouTube" class="w-8 h-8"/>
-            <span class="text-sm font-medium text-gray-800">YouTube</span>
+            <img src="asset/icon/youtube.svg" alt="YouTube" class="w-8 h-8" loading="lazy"/>
+            <span class="text-sm font-medium">YouTube</span>
           </a>
           <a href="https://web.facebook.com/pemadam.kebakaran.37201/" target="_blank" class="flex flex-col items-center gap-2 hover:scale-105 transition">
-            <img src="asset/icon/facebook.svg" alt="Facebook" class="w-8 h-8"/>
-            <span class="text-sm font-medium text-gray-800">Facebook</span>
+            <img src="asset/icon/facebook.svg" alt="Facebook" class="w-8 h-8" loading="lazy"/>
+            <span class="text-sm font-medium">Facebook</span>
           </a>
         </div>
       </div>
@@ -167,24 +171,24 @@
   </main>
 
   <!-- FOOTER -->
-  <footer class="mt-12 border-t border-slate-200 bg-white">
+  <footer class="mt-12 border-t border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-900">
     <div class="max-w-5xl mx-auto px-4 py-6 flex flex-col sm:flex-row items-center justify-between">
-      <p class="text-sm text-slate-600">&copy; 2025 Dinas Pemadam Kebakaran & Penyelamatan Kab. Barito Utara</p>
-      <p class="text-sm text-red-600 font-semibold">WhatsApp 0811-521-113</p>
+      <p class="text-sm">&copy; 2025 Dinas Pemadam Kebakaran & Penyelamatan Kab. Barito Utara</p>
+      <p class="text-sm text-red-600 dark:text-red-400 font-semibold">WhatsApp 0811-521-113</p>
     </div>
   </footer>
 
   <!-- Floating Emergency Button -->
-<a href="https://wa.me/62811521113" target="_blank" 
-  class="fixed bottom-6 right-6 bg-green-500 hover:bg-green-600 text-white shadow-lg rounded-full p-4 flex items-center justify-center animate-bounce z-50"
-  title="WhatsApp Darurat">
-  <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/whatsapp.svg" 
-       alt="WhatsApp" class="w-6 h-6 invert">
-</a>
+  <a href="https://wa.me/62811521113" target="_blank" 
+    class="fixed bottom-6 right-6 bg-green-500 hover:bg-green-600 text-white shadow-lg rounded-full p-4 flex items-center justify-center animate-bounce z-50"
+    title="WhatsApp Darurat">
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/whatsapp.svg" 
+        alt="WhatsApp" class="w-6 h-6 invert">
+  </a>
 
-
-  <!-- Script slider -->
+  <!-- Script slider & dark mode -->
   <script>
+    // Slider dots
     const slider = document.getElementById("tipsSlider");
     const dots = document.getElementById("tipsDots");
     const slides = slider.querySelectorAll(".slide");
@@ -199,22 +203,21 @@
     });
 
     function updateDots() {
-      const scrollLeft = slider.scrollLeft;
-      const index = Math.round(scrollLeft / slides[0].offsetWidth);
+      const index = Math.round(slider.scrollLeft / slides[0].offsetWidth);
       [...dots.children].forEach((dot, i) => {
         dot.className =
           "w-3 h-3 rounded-full inline-block cursor-pointer transition " +
           (i === index ? "bg-red-600 scale-110" : "bg-gray-300");
       });
     }
-
-    slider.addEventListener("scroll", () => {
-      requestAnimationFrame(updateDots);
-    });
-
+    slider.addEventListener("scroll", () => requestAnimationFrame(updateDots));
     updateDots();
+
+    // Dark mode toggle
+    const toggleBtn = document.getElementById("darkToggle");
+    toggleBtn.addEventListener("click", () => {
+      document.documentElement.classList.toggle("dark");
+    });
   </script>
 </body>
 </html>
-
-
